; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-data-ref.c_add_outer_distances.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-data-ref.c_add_outer_distances.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.data_dependence_relation = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.data_dependence_relation*, i32*, i32)* @add_outer_distances to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_outer_distances(%struct.data_dependence_relation* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.data_dependence_relation*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store %struct.data_dependence_relation* %0, %struct.data_dependence_relation** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  br label %8

8:                                                ; preds = %12, %3
  %9 = load i32, i32* %6, align 4
  %10 = add nsw i32 %9, -1
  store i32 %10, i32* %6, align 4
  %11 = icmp sge i32 %10, 0
  br i1 %11, label %12, label %28

12:                                               ; preds = %8
  %13 = load %struct.data_dependence_relation*, %struct.data_dependence_relation** %4, align 8
  %14 = call i32 @DDR_NB_LOOPS(%struct.data_dependence_relation* %13)
  %15 = call i32* @lambda_vector_new(i32 %14)
  store i32* %15, i32** %7, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = load i32*, i32** %7, align 8
  %18 = load %struct.data_dependence_relation*, %struct.data_dependence_relation** %4, align 8
  %19 = call i32 @DDR_NB_LOOPS(%struct.data_dependence_relation* %18)
  %20 = call i32 @lambda_vector_copy(i32* %16, i32* %17, i32 %19)
  %21 = load i32*, i32** %7, align 8
  %22 = load i32, i32* %6, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i32, i32* %21, i64 %23
  store i32 1, i32* %24, align 4
  %25 = load %struct.data_dependence_relation*, %struct.data_dependence_relation** %4, align 8
  %26 = load i32*, i32** %7, align 8
  %27 = call i32 @save_dist_v(%struct.data_dependence_relation* %25, i32* %26)
  br label %8

28:                                               ; preds = %8
  ret void
}

declare dso_local i32* @lambda_vector_new(i32) #1

declare dso_local i32 @DDR_NB_LOOPS(%struct.data_dependence_relation*) #1

declare dso_local i32 @lambda_vector_copy(i32*, i32*, i32) #1

declare dso_local i32 @save_dist_v(%struct.data_dependence_relation*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
